# guard

./: .gitmodules  CMakeLists.txt  README.md
include/guard/: Diagnostic.h  Exception.h  check.h  config.h
platform/msvc/: .gitignore
platform/msvc/projects/: guard.vcxproj  guard_new.vcxproj
platform/msvc2017/: .gitignore
platform/msvc2017/projects/: guard.vcxproj
source/: Diagnostic.cpp  Exception.cpp
